--- a/index2.html
+++ b/index2.html
@@ -40,6 +40,37 @@
       display: block;
       margin-top: 15px;
     }
+    @media (max-width: 480px) {
+  body {
+    padding: 10px;
+    height: auto;
+    align-items: flex-start;
+  }
+
+  .login-container {
+    width: 100%;
+    max-width: 100%;
+    padding: 1.5rem;
+    margin-top: 50px;
+    box-shadow: none;
+    border-radius: 0;
+  }
+
+  input[type="email"],
+  input[type="password"] {
+    font-size: 1rem;
+  }
+
+  button {
+    width: 100%;
+    font-size: 1rem;
+  }
+
+  a {
+    font-size: 0.95rem;
+  }
+}
+
   </style>
 </head>
 <body>
