--- a/index.html
+++ b/index.html
@@ -51,6 +51,59 @@
       display: block;
       margin-top: 15px;
     }
+
+
+   @media (max-width: 600px) {
+  body {
+    padding: 20px;
+    height: auto;
+    align-items: flex-start;
+  }
+
+  .signup-container {
+    width: 100%;
+    padding: 1.5rem;
+    border-radius: 0;
+    box-shadow: none;
+  }
+
+  .signup-container h2 {
+    font-size: 1.8rem;
+    font-weight: bold;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  input[type="password"] {
+    font-size: 1.1rem;
+    font-weight: bold;
+    padding: 12px;
+  }
+
+  input[type="file"] {
+    font-size: 1rem;
+    font-weight: bold;
+  }
+
+  .profile-pic-preview {
+    width: 90px;
+    height: 90px;
+  }
+
+  button {
+    width: 100%;
+    font-size: 1.1rem;
+    font-weight: bold;
+    padding: 12px;
+  }
+
+  a {
+    font-size: 1rem;
+    font-weight: bold;
+  }
+}
+
+
   </style>
 </head>
 <body>
