--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="#">contact</a>
             </div>
             <div>
-                <button class="signup-btn"><a href="./index.html">Sign Up</a></button>
+                <button class="signup-btn"><a href="./signup.html">Sign Up</a></button>
             </div>
         </nav>
     </header>
