--- a/otherhtmlpages/landingpage.html
+++ b/otherhtmlpages/landingpage.html
@@ -260,7 +260,14 @@
   <div class="search-bar">
     <input type="text" id="searchInput" placeholder="Search for food..." />
     <button onclick="searchFood()">Search</button>
+   
   </div>
+  <!-- Button to show bookmarks -->
+<button onclick="listOfBookmark()">List</button>
+
+<!-- Where bookmarks will be displayed -->
+<div id="bookmarkList"></div>
+
 
   <div class="results" id="results"></div>
 
