--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
     <input type="file" id="profilePic" accept="image/*" onchange="previewPic()" />
     <img class="profile-pic-preview" id="preview" />
     <button onclick="signup()">Sign Up</button>
-    <a href="./index2.html">Already have an account? Log in</a>
+    <a href="./login.html">Already have an account? Log in</a>
   </div>
 
  
