--- a/otherhtmlpages/landingpage.html
+++ b/otherhtmlpages/landingpage.html
@@ -260,14 +260,10 @@
   <div class="search-bar">
     <input type="text" id="searchInput" placeholder="Search for food..." />
     <button onclick="searchFood()">Search</button>
+    <button><a href="../bookmark.html" style="text-decoration: none; color: #fff;">bookmarklist</a></button>
    
   </div>
-  <!-- Button to show bookmarks -->
-<button onclick="listOfBookmark()">List</button>
-
-<!-- Where bookmarks will be displayed -->
-<div id="bookmarkList"></div>
-
+  
 
   <div class="results" id="results"></div>
 
