--- a/otherhtmlpages/landingpage.html
+++ b/otherhtmlpages/landingpage.html
@@ -410,7 +410,7 @@
 
     function logout() {
       localStorage.clear();
-      window.location.href = '../index.html';
+      window.location.href = '../signup.html';
     }
 
     function searchFood() {
