--- a/otherhtmlpages/landingpage.html
+++ b/otherhtmlpages/landingpage.html
@@ -404,7 +404,7 @@
         document.getElementById('profilePic').src = pic;
       } else {
         alert('User not found. Redirecting to sign up...');
-        window.location.href = '../index.html';
+        window.location.href = '../signup.html';
       }
     };
 
