--- a/login.html
+++ b/login.html
@@ -88,7 +88,7 @@
         <input type="email" id="email" placeholder="Email" required />
         <input type="password" id="password" placeholder="Password" required />
         <button onclick="login()">Login</button>
-        <a href="signup.html">Don't have an account? Sign up</a>
+        <a href="index.html">Don't have an account? Sign up</a>
     </div>
 
     <script>
