--- a/otherhtmlpages/landingpage.html
+++ b/otherhtmlpages/landingpage.html
@@ -273,27 +273,27 @@
   <div class="img-grid">
     <div>
       <a href="recipe1.html">
-        <img src="../image/1.JPG" alt="Spaghetti Bolognese">
-        <p class="caption">Spaghetti Bolognese</p>
+        <img src="../image/pando.jpeg" alt="Spaghetti Bolognese">
+        <p class="caption">pando</p>
       </a>
     </div>
     <div>
       <a href="recipe2.html">
-        <img src="../image/2.JPG" alt="Grilled Chicken">
-        <p class="caption">Grilled Chicken</p>
+        <img src="../image/egusisoupfufu.jpeg" alt="Grilled Chicken">
+        <p class="caption">egusi soup and fufu</p>
       </a>
     </div>
 
     <div>
       <a href="recipe4.html">
-        <img src="../image/4.JPG" alt="Fried Rice">
-        <p class="caption">Fried Rice</p>
+        <img src="../image/jollof.jpeg" alt="Fried Rice">
+        <p class="caption">jollof Rice</p>
       </a>
     </div>
     <div>
       <a href="recipe5.html">
-        <img src="../image/5.JPG" alt="Chicken Biryani">
-        <p class="caption">Chicken Biryani</p>
+        <img src="../image/suya.jpeg" alt="Chicken Biryani">
+        <p class="caption">suya</p>
       </a>
     </div>
     <div>
@@ -358,7 +358,7 @@
 
 
 
-  <footer style="background-color: #2c3e50; color: white; padding: 30px 20px; margin-top: 50px;">
+  <footer style="background-color: navy; color: white; padding: 30px 20px; margin-top: 50px;">
     <div style="display: flex; flex-wrap: wrap; justify-content: space-between; gap: 2rem;">
       <div>
         <h4>Support</h4>
@@ -410,7 +410,7 @@
 
     function logout() {
       localStorage.clear();
-      window.location.href = '../signup.html';
+      window.location.href = '../index.html';
     }
 
     function searchFood() {
